--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # Server Port (Default is 8080)
 server.port=8080
 
-# Database Configuration
+# Database Configuration (MySQL - update username/password for your environment)
 spring.datasource.url=jdbc:mysql://localhost:3306/portfolio_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=n3u3da!
+spring.datasource.password=Maple@2025
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Hibernate (JPA) Settings
