--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # Database Configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/portfolio_db?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=root
-spring.datasource.password=Maple@2025
+spring.datasource.password=n3u3da!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
-gemini.api-keys=api_key1,api_key2
+gemini.api-keys=AIzaSyBxIXQ7VB9F-xe8zI8rOZd-z0Gevy6E018,AIzaSyAXEcgi_9YTGsnsFSk3ftyZ7Nn-eyJB88U
 gemini.base-url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
 gemini.max-retries=3
 gemini.timeout-seconds=30
