--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,7 +16,7 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 
-gemini.api-keys=api_key1,api_key2
+gemini.api-keys=api-key1
 gemini.base-url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
 gemini.max-retries=3
 gemini.timeout-seconds=30
