Update Gemini API key in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-gemini.api-keys=AIzaSyB-k1yTkkLLXv15NngK08RWUfQX7UU5itc
+gemini.api-keys=api_key1
 gemini.base-url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
 gemini.max-retries=3
 gemini.timeout-seconds=30
